Fix image issues and mobile overflow

--- a/styles/global.css
+++ b/styles/global.css
@@ -34,6 +34,11 @@ html {
   @apply text-gray-800 dark:text-gray-200 px-1 py-0.5 border border-gray-100 dark:border-gray-800 rounded-md bg-gray-100 dark:bg-gray-900;
 }
 
+.prose img {
+  /* Don't apply styles to next/image */
+  @apply m-0;
+}
+
 .token.comment,
 .token.prolog,
 .token.doctype,
@@ -101,7 +106,6 @@ pre::-webkit-scrollbar {
 pre {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
-  overflow-x: auto;
 }
 
 .remark-code-title {
